--- a/almostauto-web/pyproject.toml
+++ b/almostauto-web/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 dependencies = [
     "almostauto-db>=0.1.0",
     "litestar[standard]>=2.9.1",
-    "jinja2-fragments>=1.5.0",
+    "jinjax>=0.43",
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
