Moving to uv from rye

--- a/almostauto-web/pyproject.toml
+++ b/almostauto-web/pyproject.toml
@@ -17,8 +17,7 @@ requires-python = ">= 3.12"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
-managed = true
+[tool.uv]
 dev-dependencies = [
     "pytest>=8.2.2",
 ]
@@ -32,8 +31,3 @@ include = [
     "src/almostauto/web/components/**/*.jinja",
     "src/almostauto/web/static/**/*.css",
 ]
-
-[tool.rye.scripts]
-devserver = "litestar --app almostauto.web.app:app run --reload --debug"
-tailwind = "tailwindcss -i src/almostauto/web/input.css -o src/almostauto/web/static/style.css"
-tailwind-watch = "tailwindcss -i src/almostauto/web/input.css -o src/almostauto/web/static/style.css --watch"
