--- a/almostauto-db/pyproject.toml
+++ b/almostauto-db/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = ">= 3.12"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
+[tool.uv]
 managed = true
 dev-dependencies = []
 
