--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,5 @@
-[project]
-name = "almostauto"
-version = "0.1.0"
-description = "Add your description here"
-authors = [
-    { name = "Michael Caley", email = "mjcaley@darkarctic.com" }
-]
-dependencies = []
-readme = "README.md"
-requires-python = ">= 3.12"
-
-[tool.rye]
-managed = true
-virtual = true
-dev-dependencies = []
-
-[tool.rye.workspace]
+[tool.uv.workspace]
 members = ["almostauto-*"]
+
+[tool.uv.sources]
+almostauto-db = { workspace = true }
